raffia/tests/error/selectors/invalid-attr-5.snap
---
source: raffia/tests/error.rs
---
error: expect token `]`, but found `<string>`
  ┌─ invalid-attr-5.css:1:14
  │
1 │ [href="test" "z"] {}
  │              ^^^


